all forms finished

--- a/app/views/forms/_form.html.erb
+++ b/app/views/forms/_form.html.erb
@@ -39,37 +39,37 @@
                         <img width="100%" class="header1042s" src="/media/form_header.png" />
                           <div id="fields-container" class="form1042s">
                              <img width="100%" src="/media/form1.png" />
-                              <input class="abs" style="top: 4%;left: 3%;width: 47%;" name="13e" value="" type="text">
-                              <input class="abs" style="top: 1%;left: 78%;width: 20%;height: 3%;" name="13f" value="" type="text">
-                              <input class="abs" style="top: 4.5%;left: 78%;width: 20%;height: 3%;" name="13g" value="" type="text">
-                              <input class="abs" style="top: 10%;left: 3%;width: 32%;height: 8%;" name="13h" value="" type="text">
-                              <input class="abs" style="top: 13%;left: 37%;width: 41%;height: 5%;" name="13i" value="" type="text">
-                              <input class="abs" style="top: 11%;left: 81%;width: 17%;height: 7%;" name="13j" value="" type="text">
-                              <input class="abs" style="top: 21.5%;left: 3%;width: 58%;height: 4%;" name="13k" value="" type="text">
-                              <input class="abs" style="top: 21.5%;left: 66%;width: 31%;height: 4%;" name="13l" value="" type="text">
-                              <input class="abs" style="top: 29%;left: 5%;width: 90%;height: 4%;" name="14a" value="" type="text">
-                              <input class="abs" style="top: 36.5%;left: 5%;width: 45%;height: 3.8%;" name="14b" value="" type="text">
+                              <input class="abs" style="top: 4%;left: 3%;width: 47%;" name="13e" value="<%= @form_fields['13e']%>" type="text">
+                              <input class="abs" style="top: 1%;left: 78%;width: 20%;height: 3%;" name="13f" value="<%= @form_fields['13f']%>" type="text">
+                              <input class="abs" style="top: 4.5%;left: 78%;width: 20%;height: 3%;" name="13g" value="<%= @form_fields['13g']%>" type="text">
+                              <input class="abs" style="top: 10%;left: 3%;width: 32%;height: 8%;" name="13h" value="<%= @form_fields['13h']%>" type="text">
+                              <input class="abs" style="top: 13%;left: 37%;width: 41%;height: 5%;" name="13i" value="<%= @form_fields['13i']%>" type="text">
+                              <input class="abs" style="top: 11%;left: 81%;width: 17%;height: 7%;" name="13j" value="<%= @form_fields['13j']%>" type="text">
+                              <input class="abs" style="top: 21.5%;left: 3%;width: 58%;height: 4%;" name="13k" value="<%= @form_fields['13k']%>" type="text">
+                              <input class="abs" style="top: 21.5%;left: 66%;width: 31%;height: 4%;" name="13l" value="<%= @form_fields['13l']%>" type="text">
+                              <input class="abs" style="top: 29%;left: 5%;width: 90%;height: 4%;" name="14a" value="<%= @form_fields['14a']%>" type="text">
+                              <input class="abs" style="top: 36.5%;left: 5%;width: 45%;height: 3.8%;" name="14b" value="<%= @form_fields['14b']%>" type="text">
                               <input name="15" value="unchecked" type="hidden">
-                              <input class="abs" style="top: 35%;left: 92%;width: 3%;height: 3%;" name="15" value="checked" type="checkbox">
-                              <input class="abs" style="top: 43%;left: 5%;width: 51%;height: 5%;" name="15a" value="" type="text">
-                              <input class="abs" style="top: 43%;left: 57%;width: 20%;height: 4.7%;" name="15b" value="" type="text">
-                              <input class="abs" style="top: 43%;left: 78%;width: 20%;height: 5%;" name="15c" value="" type="text">
-                              <input class="abs" style="top: 48.3%;left: 53%;width: 45%;height: 3.1%;" name="15d" value="" type="text">
-                              <input class="abs" style="top: 52%;left: 53%;width: 45%;height: 2.9%;" name="15e" value="" type="text">
-                              <input class="abs" style="top: 58%;left: 2%;width: 27%;height: 4%;" name="15f" value="" type="text">
-                              <input class="abs" style="top: 58%;left: 32%;width: 63%;height: 4.5%;" name="15g" value="" type="text">
-                              <input class="abs" style="top: 65%;left: 4%;width: 92%;height: 4.3%;" name="15h" value="" type="text">
-                              <input class="abs" style="top: 72.3%;left: 4%;width: 92%;height: 4.2%;" name="15i" value="" type="text">
-                              <input class="abs" style="top: 79.7%;left: 4%;width: 59%;height: 4.5%;" name="16a" value="" type="text">
-                              <input class="abs" style="top: 79.8%;left: 65%;width: 33%;height: 4.5%;" name="16b" value="" type="text">
-                              <input class="abs" style="top: 87%;left: 4%;width: 46%;height: 4%;" name="16c" value="" type="text">
-                              <input class="abs" style="top: 87%;left: 52%;width: 21%;height: 4.5%;" name="16d" value="" type="text">
-                              <input class="abs" style="top: 87%;left: 76%;width: 22%;height: 4.5%;" name="16e" value="" type="text">
-                              <input class="abs" style="top: 94.5%;left: 4%;width: 36%;height: 4.4%;" name="17a" value="" type="text">
+                              <input class="abs" style="top: 35%;left: 92%;width: 3%;height: 3%;" name="15" <%= @form_fields['15']%> value="checked" type="checkbox">
+                              <input class="abs" style="top: 43%;left: 5%;width: 51%;height: 5%;" name="15a" value="<%= @form_fields['15a']%>" type="text">
+                              <input class="abs" style="top: 43%;left: 57%;width: 20%;height: 4.7%;" name="15b" value="<%= @form_fields['15b']%>" type="text">
+                              <input class="abs" style="top: 43%;left: 78%;width: 20%;height: 5%;" name="15c" value="<%= @form_fields['15c']%>" type="text">
+                              <input class="abs" style="top: 48.3%;left: 53%;width: 45%;height: 3.1%;" name="15d" value="<%= @form_fields['15d']%>" type="text">
+                              <input class="abs" style="top: 52%;left: 53%;width: 45%;height: 2.9%;" name="15e" value="<%= @form_fields['15e']%>" type="text">
+                              <input class="abs" style="top: 58%;left: 2%;width: 27%;height: 4%;" name="15f" value="<%= @form_fields['15f']%>" type="text">
+                              <input class="abs" style="top: 58%;left: 32%;width: 63%;height: 4.5%;" name="15g" value="<%= @form_fields['15g']%>" type="text">
+                              <input class="abs" style="top: 65%;left: 4%;width: 92%;height: 4.3%;" name="15h" value="<%= @form_fields['15h']%>" type="text">
+                              <input class="abs" style="top: 72.3%;left: 4%;width: 92%;height: 4.2%;" name="15i" value="<%= @form_fields['15i']%>" type="text">
+                              <input class="abs" style="top: 79.7%;left: 4%;width: 59%;height: 4.5%;" name="16a" value="<%= @form_fields['16a']%>" type="text">
+                              <input class="abs" style="top: 79.8%;left: 65%;width: 33%;height: 4.5%;" name="16b" value="<%= @form_fields['16b']%>" type="text">
+                              <input class="abs" style="top: 87%;left: 4%;width: 46%;height: 4%;" name="16c" value="<%= @form_fields['16c']%>" type="text">
+                              <input class="abs" style="top: 87%;left: 52%;width: 21%;height: 4.5%;" name="16d" value="<%= @form_fields['16d']%>" type="text">
+                              <input class="abs" style="top: 87%;left: 76%;width: 22%;height: 4.5%;" name="16e" value="<%= @form_fields['16e']%>" type="text">
+                              <input class="abs" style="top: 94.5%;left: 4%;width: 36%;height: 4.4%;" name="17a" value="<%= @form_fields['17a']%>" type="text">
 
 
-                              <input class="abs" style="top: 94.5%;left: 42%;width: 29%;height: 4.4%;" name="17b" value="" type="text">
-                              <input class="abs" style="top: 94.4%;left: 73%; width: 24%;height: 4.4%;" name="17c" value="" type="text">
+                              <input class="abs" style="top: 94.5%;left: 42%;width: 29%;height: 4.4%;" name="17b" value="<%= @form_fields['17b']%>" type="text">
+                              <input class="abs" style="top: 94.4%;left: 73%; width: 24%;height: 4.4%;" name="17c" value="<%= @form_fields['17c']%>" type="text">
                               
                               <input type="hidden" name="unique_id" value="<%= @form_fields['unique_id'] %>">
                               <input type="hidden" name="form_id" value="1042-s"> 
