--- a/app/views/forms/_form1099a.html.erb
+++ b/app/views/forms/_form1099a.html.erb
@@ -33,20 +33,23 @@
                                 <div id="fields-container" class="form1099a">
                                    <img width="100%" src="/media/1099a.png" />
 
-                                   <input class="abs" style="top: 14%;left: 1%;width: 45%;height:20%;border:1px solid black;" name="lenders_name_address" value="" type="text">
-                                    <input class="abs" style="top: 39%;left: 1%;width: 22%;height:6%;border:1px solid black;" name="lenders_fin" value="" type="text">
-                                    <input class="abs" style="top: 39%;left: 24%;width: 22%;height:6%;border:1px solid black" name="borrowers_id" value="" type="text">
+                                   <input class="abs" style="top: 14%;left: 1%;width: 45%;height:20%;" name="lenders_name_address" value="<%= @form_fields['lenders_name_address']%>" type="text">
+                                    <input class="abs" style="top: 39%;left: 1%;width: 22%;height:6%;" name="lenders_fin" value="<%= @form_fields['lenders_fin']%>" type="text">
+                                    <input class="abs" style="top: 39%;left: 24%;width: 22%;height:6%;border:1px solid black" name="borrowers_id" value="<%= @form_fields['borrowers_id']%>" type="text">
                                     
-                                    <input class="abs" style="top: 49%;left: 1%;width: 45%;height:10%;border:1px solid black" name="borrowers_name" value="" type="text">
-                                    <input class="abs" style="top: 38%;left: 47%;width: 18%;height:6%;border:1px solid black" name="1" value="" type="text">
-                                    <input class="abs" style="top: 38%;left: 68%;width: 16%;height:6%;border:1px solid black" name="2" value="" type="text">
-                                    <input class="abs" style="top: 46%;left: 48%;width: 17%;height: 13%;border:1px solid black;" name="3" value="" type="text">
-                                    <input class="abs" style="top: 49%;left: 68%;width: 16%;height:10%;border:1px solid black" name="4" value="" type="text">
-                                    <input class="abs" style="top: 66%;left: 82.5%;width: 1%;height:2%;border:1px solid black" name="5" value="" type="text">
-                                    <input class="abs" style="top: 74%;left: 47%;width: 37%;height: 14%;border:1px solid black;" name="6" value="" type="text">
-                                    <input class="abs" style="top: 64%;left: 1%;width: 45%;height: 5%;border:1px solid black;" name="street_address" value="" type="text">
-                                    <input class="abs" style="top: 74%;left: 1%;width: 45%;height: 4.8%;border:1px solid black;" name="city_town" value="" type="text">
-                                    <input class="abs" style="top: 83%;left: 1%;width: 45%;height: 5%;border:1px solid black;" name="account_number" value="" type="text">
+                                    <input class="abs" style="top: 49%;left: 1%;width: 45%;height:10%;border:1px solid black" name="borrowers_name" value="<%= @form_fields['borrowers_name']%>" type="text">
+                                    <input class="abs" style="top: 38%;left: 47%;width: 18%;height:6%;border:1px solid black" name="1" value="<%= @form_fields['1']%>" type="text">
+                                    <input class="abs" style="top: 38%;left: 68%;width: 16%;height:6%;border:1px solid black" name="2" value="<%= @form_fields['2']%>" type="text">
+                                    <input class="abs" style="top: 46%;left: 48%;width: 17%;height: 13%;" name="3" value="<%= @form_fields['3']%>" type="text">
+                                    <input class="abs" style="top: 49%;left: 68%;width: 16%;height:10%;border:1px solid black" name="4" value="<%= @form_fields['4']%>" type="text">
+
+                                    <input name="5" value="unchecked" type="hidden">
+                                    <input class="abs" style="top: 65%;left: 82.3%;" name="5" <%= @form_fields['5']%> value="checked" type="checkbox">
+
+                                    <input class="abs" style="top: 74%;left: 47%;width: 37%;height: 14%;" name="6" value="<%= @form_fields['6']%>" type="text">
+                                    <input class="abs" style="top: 64%;left: 1%;width: 45%;height: 5%;" name="street_address" value="<%= @form_fields['street_address']%>" type="text">
+                                    <input class="abs" style="top: 74%;left: 1%;width: 45%;height: 4.8%;" name="city_town" value="<%= @form_fields['city_town']%>" type="text">
+                                    <input class="abs" style="top: 83%;left: 1%;width: 45%;height: 5%;" name="account_number" value="<%= @form_fields['account_number']%>" type="text">
                                 
                                    
 
