--- a/app/views/forms/_form1099c.html.erb
+++ b/app/views/forms/_form1099c.html.erb
@@ -33,20 +33,24 @@
                                    <img width="100%" src="/media/1099c.png" />
 
                                     <!-- fields -->
-                                   <input class="abs" style="top: 13%;left: 1.5%;width: 44%;height: 21%;" name="creditors_name_address" value="" type="text">
-                                    <input class="abs" style="top: 38.5%;left: 1.5%;width: 21.5%;height: 5%;" name="creditors_fin" value="" type="text">
-                                    <input class="abs" name="debtors_id" value="" style="top: 38.5%;left: 24.5%;width: 21.5%;height: 5%;" type="text">
-                                    <input class="abs" name="debtors_name" value="" style="top: 48.5%;left: 1.5%;width: 44.5%;height: 9%;" type="text">
-                                    <input class="abs" name="street_address" value="" style="top: 63%;left: 1.5%;width: 44.5%;height: 5%;" type="text">
-                                    <input class="abs" name="city_town_state" value="" style="top: 73.5%;left: 1.5%;width: 44.5%;height: 5%;" type="text">
-                                    <input class="abs" name="account_num" value="" style="top: 83%;left: 1.5%;width: 44.5%;height: 5%;" type="text">
-                                    <input class="abs" style="top: 9%;left: 47%;width: 18%;height: 5%;" name="1" value="" type="text">
-                                    <input class="abs" style="top: 19%;left: 48.5%;width: 16.5%;height: 5%;" name="2" value="" type="text">
-                                    <input class="abs" style="top: 29%;left: 48.5%;width: 16.5%;height: 5%;" name="3" value="" type="text">
-                                    <input class="abs" name="4" value="" style="top: 39%;left: 47.5%;width: 36.5%;height: 19%;" type="text">
-                                    <input class="abs" name="5" value="" style="top: 67%;left: 47.5%;width: 36.5%;height: 11%;" type="text">
-                                    <input class="abs" name="6" value="" style="top: 83%;left: 47.5%;width: 17.5%;height: 5%;" type="text">
-                                    <input class="abs" name="7" value="" style="top: 83%;left: 67.5%;width: 16.5%;height: 5%;" type="text">
+                                   <input class="abs" style="top: 13%;left: 1.5%;width: 44%;height: 21%;" name="creditors_name_address" value="<%= @form_fields['']%>" type="text">
+                                    <input class="abs" style="top: 38.5%;left: 1.5%;width: 21.5%;height: 5%;" name="creditors_fin" value="<%= @form_fields['']%>" type="text">
+                                    <input class="abs" name="debtors_id" value="<%= @form_fields['debtors_id']%>" style="top: 38.5%;left: 24.5%;width: 21.5%;height: 5%;" type="text">
+                                    <input class="abs" name="debtors_name" value="<%= @form_fields['debtors_name']%>" style="top: 48.5%;left: 1.5%;width: 44.5%;height: 9%;" type="text">
+                                    <input class="abs" name="street_address" value="<%= @form_fields['street_address']%>" style="top: 63%;left: 1.5%;width: 44.5%;height: 5%;" type="text">
+                                    <input class="abs" name="city_town_state" value="<%= @form_fields['city_town_state']%>" style="top: 73.5%;left: 1.5%;width: 44.5%;height: 5%;" type="text">
+                                    <input class="abs" name="account_num" value="<%= @form_fields['account_num']%>" style="top: 83%;left: 1.5%;width: 44.5%;height: 5%;" type="text">
+                                    <input class="abs" style="top: 9%;left: 47%;width: 18%;height: 5%;" name="1" value="<%= @form_fields['1']%>" type="text">
+                                    <input class="abs" style="top: 19%;left: 48.5%;width: 16.5%;height: 5%;" name="2" value="<%= @form_fields['2']%>" type="text">
+                                    <input class="abs" style="top: 29%;left: 48.5%;width: 16.5%;height: 5%;" name="3" value="<%= @form_fields['3']%>" type="text">
+                                    <input class="abs" name="4" value="<%= @form_fields['4']%>" style="top: 39%;left: 47.5%;width: 36.5%;height: 19%;" type="text">
+
+                                  
+                                    <input name="5" value="unchecked" type="hidden">
+                                    <input class="abs" style="top: 62%;left: 81.8%;" name="5" <%= @form_fields['5']%> value="checked" type="checkbox">
+
+                                    <input class="abs" name="6" value="<%= @form_fields['6']%>" style="top: 83%;left: 47.5%;width: 17.5%;height: 5%;" type="text">
+                                    <input class="abs" name="7" value="<%= @form_fields['7']%>" style="top: 83%;left: 67.5%;width: 16.5%;height: 5%;" type="text">
                                     
                                     
                                   <!-- fields -->
