--- a/app/views/forms/_form1099k.html.erb
+++ b/app/views/forms/_form1099k.html.erb
@@ -32,52 +32,69 @@
                                    <img width="100%" src="/media/1099k.png" />
                                     
                                     <!-- fields -->
-                                    <input class="abs" style="top: 9%;left: 2%;width: 44%;height: 21%;" name="filers_name_street" value="" type="text">
-                                    <input class="abs" name="payment_settlement_entity" value="" style="" type="text">
-                                    <input class="abs" name="electronic_payment_fac" value="" style="" type="text">
-                                    <input class="abs" name="payment_card" value="" style="" type="text">
-                                    <input class="abs" name="third_party_network" value="" style="" type="text">
-                                    <input class="abs" style="top: 46%;left: 2%;width: 44%;height: 7%;" name="payees_name" value="" type="text">
-                                    <input class="abs" style="top: 56%;left: 2%;width: 44%;height: 10%;" name="street_address" value="" type="text">
-                                    <input class="abs" style="top: 69%;left: 2%;width: 44%;" name="city_town_state" value="" type="text">
-                                    <input class="abs" style="top: 76%;left: 2%;width: 44%;height: 6%;" name="pses_name" value="" type="text">
-                                    <input class="abs" style="top: 86%;left: 2%;width: 36%;height: 6%;" name="account_num" value="" type="text">
-                                    <input class="abs" name="2nd_tin_not" value="" style="" type="text">
-                                    <input class="abs" style="top: 6.2%;left: 47%;width: 17.5%;" name="filers_fin" value="" type="text">
-                                    <input class="abs" style="top: 13%;left: 47%;width: 17.5%;" name="payees_taxpayer" value="" type="text">
-                                    <input class="abs" style="top: 23.2%;left: 48.5%;width: 16%;height: 3%;" name="1a" value="" type="text">
-                                    <input class="abs" style="top: 31%;left: 48.5%;width: 16%;" name="1b" value="" type="text">
-                                    <input class="abs" style="top: 29.5%;left: 66%;width: 17.5%;height: 4.7%;" name="2" value="" type="text">
-                                    <input class="abs" name="3" value="" style="top: 39.5%;left: 47%;width: 17.5%;height: 3.2%;" type="text">
-                                    <input class="abs" name="4" value="" style="top: 39.5%;left: 67%;width: 16%;height: 3.2%;" type="text">
-                                    <input class="abs" name="5a" value="" style="top: 46.5%;left: 48.5%;width: 16%;height: 3.2%;" type="text">
-                                    <input class="abs" name="5b" value="" style="top: 46.5%;left: 67%;width: 16%;height: 3.2%;" type="text">
-                                    <input class="abs" name="5c" value="" style="top: 53%;left: 48.5%;width: 16%;height: 3.2%;" type="text">
-                                    <input class="abs" name="5d" value="" style="top: 53%;left: 67%;width: 16%;height: 3.2%;" type="text">
+                                    <input class="abs" style="top: 9%;left: 2%;width: 44%;height: 21%;" name="filers_name_street" value="<%= @form_fields['filers_name_street']%>" type="text">
 
-                                    <input class="abs" name="5e" value="" style="top: 59.5%;left: 48.5%;width: 16%;height: 3.2%;" type="text">
+                            <input name="payment_settlement_entity" value="unchecked" type="hidden">
+                            <input class="abs" style="top: 35.2%;left: 21.8%;" name="payment_settlement_entity" <%= @form_fields['payment_settlement_entity']%> value="checked" type="checkbox">
+
+                            <input name="electronic_payment_fac" value="unchecked" type="hidden">
+                            <input class="abs" style="top: 39.8%;left: 21.8%;" name="electronic_payment_fac" <%= @form_fields['electronic_payment_fac']%> value="checked" type="checkbox">
+
+
+                            <input name="payment_card" value="unchecked" type="hidden">
+                            <input class="abs" style="top: 35.2%;left: 44.3%;" name="payment_card" <%= @form_fields['payment_card']%> value="checked" type="checkbox">
+
+
+                            <input name="third_party_network" value="unchecked" type="hidden">
+                            <input class="abs" style="top:39.8%;left:44.3%;" name="third_party_network" <%= @form_fields['third_party_network']%> value="checked" type="checkbox">
+
+
+
+                                    <input class="abs" style="top: 46%;left: 2%;width: 44%;height: 7%;" name="payees_name" value="<%= @form_fields['payees_name']%>" type="text">
+                                    <input class="abs" style="top: 56%;left: 2%;width: 44%;height: 10%;" name="street_address" value="<%= @form_fields['street_address']%>" type="text">
+                                    <input class="abs" style="top: 69%;left: 2%;width: 44%;" name="city_town_state" value="<%= @form_fields['city_town_state']%>" type="text">
+                                    <input class="abs" style="top: 76%;left: 2%;width: 44%;height: 6%;" name="pses_name" value="<%= @form_fields['pses_name']%>" type="text">
+                                    <input class="abs" style="top: 86%;left: 2%;width: 36%;height: 6%;" name="account_num" value="<%= @form_fields['account_num']%>" type="text">
+
+                            <input name="2nd_tin_not" value="unchecked" type="hidden">
+                            <input class="abs" style="top:87.2%;left:41.8%;" name="2nd_tin_not" <%= @form_fields['2nd_tin_not']%> value="checked" type="checkbox">
+
+
+                                    <input class="abs" style="top: 6.2%;left: 47%;width: 17.5%;" name="filers_fin" value="<%= @form_fields['filers_fin']%>" type="text">
+                                    <input class="abs" style="top: 13%;left: 47%;width: 17.5%;" name="payees_taxpayer" value="<%= @form_fields['payees_taxpayer']%>" type="text">
+                                    <input class="abs" style="top: 23.2%;left: 48.5%;width: 16%;height: 3%;" name="1a" value="<%= @form_fields['1a']%>" type="text">
+                                    <input class="abs" style="top: 31%;left: 48.5%;width: 16%;" name="1b" value="<%= @form_fields['1b']%>" type="text">
+                                    <input class="abs" style="top: 29.5%;left: 66%;width: 17.5%;height: 4.7%;" name="2" value="<%= @form_fields['2']%>" type="text">
+                                    <input class="abs" name="3" value="<%= @form_fields['3']%>" style="top: 39.5%;left: 47%;width: 17.5%;height: 3.2%;" type="text">
+                                    <input class="abs" name="4" value="<%= @form_fields['4']%>" style="top: 39.5%;left: 67%;width: 16%;height: 3.2%;" type="text">
+                                    <input class="abs" name="5a" value="<%= @form_fields['5a']%>" style="top: 46.5%;left: 48.5%;width: 16%;height: 3.2%;" type="text">
+                                    <input class="abs" name="5b" value="<%= @form_fields['5b']%>" style="top: 46.5%;left: 67%;width: 16%;height: 3.2%;" type="text">
+                                    <input class="abs" name="5c" value="<%= @form_fields['5c']%>" style="top: 53%;left: 48.5%;width: 16%;height: 3.2%;" type="text">
+                                    <input class="abs" name="5d" value="<%= @form_fields['5d']%>" style="top: 53%;left: 67%;width: 16%;height: 3.2%;" type="text">
+
+                                    <input class="abs" name="5e" value="<%= @form_fields['5e']%>" style="top: 59.5%;left: 48.5%;width: 16%;height: 3.2%;" type="text">
                                     
-                                    <input class="abs" name="5f" value="" style="top: 59.5%;left: 67%;width: 16%;height: 3.2%;" type="text">
+                                    <input class="abs" name="5f" value="<%= @form_fields['5f']%>" style="top: 59.5%;left: 67%;width: 16%;height: 3.2%;" type="text">
 
-                                    <input class="abs" name="5g" value="" style="top: 66.5%;left: 48.5%;width: 16%;height: 3.2%;" type="text">
+                                    <input class="abs" name="5g" value="<%= @form_fields['5g']%>" style="top: 66.5%;left: 48.5%;width: 16%;height: 3.2%;" type="text">
 
-                                    <input class="abs" name="5h" value="" style="top: 66.5%;left: 67%;width: 16%;height: 3.2%;" type="text">
+                                    <input class="abs" name="5h" value="<%= @form_fields['5h']%>" style="top: 66.5%;left: 67%;width: 16%;height: 3.2%;" type="text">
 
-                                    <input class="abs" name="5i" value="" style="top: 72.5%;left: 48.5%;width: 16%;height: 3.2%;" type="text">
+                                    <input class="abs" name="5i" value="<%= @form_fields['5i']%>" style="top: 72.5%;left: 48.5%;width: 16%;height: 3.2%;" type="text">
 
-                                    <input class="abs" name="5j" value="" style="top: 72.5%;left: 67%;width: 16%;height: 3.2%;" type="text">
+                                    <input class="abs" name="5j" value="<%= @form_fields['5j']%>" style="top: 72.5%;left: 67%;width: 16%;height: 3.2%;" type="text">
 
-                                    <input class="abs" name="5k" value="" style="top: 79.5%;left: 48.5%;width: 16%;height: 3.2%;" type="text">
+                                    <input class="abs" name="5k" value="<%= @form_fields['5k']%>" style="top: 79.5%;left: 48.5%;width: 16%;height: 3.2%;" type="text">
 
-                                    <input class="abs" name="5l" value="" style="top: 79.5%;left: 67%;width: 16%;height: 3.2%;" type="text">
+                                    <input class="abs" name="5l" value="<%= @form_fields['5l']%>" style="top: 79.5%;left: 67%;width: 16%;height: 3.2%;" type="text">
 
-                                    <input class="abs" name="6" value="" style="top: 86%;left: 48.5%;width: 16%;height: 3.2%;" type="text">
+                                    <input class="abs" name="6" value="<%= @form_fields['6']%>" style="top: 86%;left: 48.5%;width: 16%;height: 3.2%;" type="text">
 
-                                    <input class="abs" name="7" value="" style="top: 86%;left: 67%;width: 16%;height: 3.2%;" type="text">
+                                    <input class="abs" name="7" value="<%= @form_fields['7']%>" style="top: 86%;left: 67%;width: 16%;height: 3.2%;" type="text">
 
-                                    <input class="abs" name="8" value="" style="top: 86%;left: 85.7%;width: 13%;height: 3.2%;" type="text">
+                                    <input class="abs" name="8" value="<%= @form_fields['8']%>" style="top: 86%;left: 85.7%;width: 13%;height: 3.2%;" type="text">
 
-                                    <input class="abs" name="8_2" value="" style="top: 90%;left: 85.7%;width: 13%;height: 3%;" type="text">
+                                    <input class="abs" name="8_2" value="<%= @form_fields['8_2']%>" style="top: 90%;left: 85.7%;width: 13%;height: 3%;" type="text">
 
                                 
 
