--- a/app/views/forms/_form1099ltc.html.erb
+++ b/app/views/forms/_form1099ltc.html.erb
@@ -32,26 +32,39 @@
                                    <img width="100%" src="/media/1099ltc.png" />
                                     
                                     <!-- fields -->
-                                   <input class="abs" style="top: 13%;left: 1.5%;width: 44%;height: 20%;" name="payers_name_street" value="" type="text">
-                                    <input class="abs" style="top: 38.5%;left: 1.5%;width: 21.5%;height: 5%;" name="payers_fin" value="" type="text">
-                                    <input class="abs" name="policyholders_id" value="" style="top: 38.5%;left: 24.5%;width: 21.5%;height: 5%;" type="text">
-                                    <input class="abs" style="top: 49%;left: 1.5%;width: 44.5%;height: 9%;" name="policyholders_name" value="" type="text">
-                                    <input class="abs" style="top: 63.5%;left: 1.5%;width: 44.5%;" name="street_address" value="" type="text">
-                                    <input class="abs" style="top: 73%;left: 1.5%;width: 44.5%;" name="city_town_state" value="" type="text">
-                                    <input class="abs" style="top: 83%;left: 1.5%;width: 29%;" name="account_num" value="" type="text">
-                                    <input class="abs" name="qualifield_contract" value="" style="" type="text">
-                                    <input class="abs" style="top: 13%;left: 48.5%;width: 16.5%;height: 11%;" name="1" value="" type="text">
-                                    <input class="abs" name="2" value="" style="top: 32%;left: 48.5%;width: 16.5%;height: 7%;" type="text">
-                                    <input class="abs" name="per_diem" value="" style="" type="text">
-                                    <input class="abs" name="reimbursed_amount" value="" style="" type="text">
-                                    <input class="abs" style="top: 39%;left: 66%;width: 18%;height: 10%;" name="insureds_taxpayer_id" value="" type="text">
-                                    <input class="abs" name="insureds_name" value="" style="top: 53%;left: 47.5%;width: 36%;height: 6%;" type="text">
-                                    <input class="abs" name="street_address" value="" style="top: 63.2%;left: 47.5%;width: 36%;height: 5.8%;" type="text">
-                                    <input class="abs" name="city_town_state" value="" style="top: 73.2%;left: 47.5%;width: 36%;height: 5.8%;" type="text">
-                                    <input class="abs" name="check_if_applicable" value="" style="" type="text">
-                                    <input class="abs" name="chronically_ill" value="" style="" type="text">
-                                    <input class="abs" name="terminally_ill" value="" style="" type="text">
-                                    <input class="abs" name="date_certifed" value="" style="top: 83.2%;left: 74%;width: 10%;height: 5.5%;" type="text">
+                                   <input class="abs" style="top: 13%;left: 1.5%;width: 44%;height: 20%;" name="payers_name_street" value="<%= @form_fields['payers_name_street']%>" type="text">
+                                    <input class="abs" style="top: 38.5%;left: 1.5%;width: 21.5%;height: 5%;" name="payers_fin" value="<%= @form_fields['payers_fin']%>" type="text">
+                                    <input class="abs" name="policyholders_id" value="<%= @form_fields['policyholders_id']%>" style="top: 38.5%;left: 24.5%;width: 21.5%;height: 5%;" type="text">
+                                    <input class="abs" style="top: 49%;left: 1.5%;width: 44.5%;height: 9%;" name="policyholders_name" value="<%= @form_fields['policyholders_name']%>" type="text">
+                                    <input class="abs" style="top: 63.5%;left: 1.5%;width: 44.5%;" name="street_address" value="<%= @form_fields['street_address']%>" type="text">
+                                    <input class="abs" style="top: 73%;left: 1.5%;width: 44.5%;" name="city_town_state" value="<%= @form_fields['city_town_state']%>" type="text">
+                                    <input class="abs" style="top: 83%;left: 1.5%;width: 29%;" name="account_num" value="<%= @form_fields['account_num']%>" type="text">
+
+                            <input name="qualifield_contract" value="unchecked" type="hidden">
+                            <input class="abs" style="top:84%;left:33.4%;" name="qualifield_contract" <%= @form_fields['qualifield_contract']%> value="checked" type="checkbox">
+
+                                    <input class="abs" style="top: 13%;left: 48.5%;width: 16.5%;height: 11%;" name="1" value="<%= @form_fields['1']%>" type="text">
+                                    <input class="abs" name="2" value="<%= @form_fields['2']%>" style="top: 32%;left: 48.5%;width: 16.5%;height: 7%;" type="text">
+
+
+                            <input name="per_diem" value="unchecked" type="hidden">
+                            <input class="abs" style="top:44%;left:48%;" name="per_diem" <%= @form_fields['per_diem']%> value="checked" type="checkbox">
+                            <input name="reimbursed_amount" value="unchecked" type="hidden">
+                            <input class="abs" style="top:44%;left:54.8%;" name="reimbursed_amount" <%= @form_fields['reimbursed_amount']%> value="checked" type="checkbox">
+
+
+                                    <input class="abs" style="top: 39%;left: 66%;width: 18%;height: 10%;" name="insureds_taxpayer_id" value="<%= @form_fields['insureds_taxpayer_id']%>" type="text">
+                                    <input class="abs" name="insureds_name" value="<%= @form_fields['insureds_name']%>" style="top: 53%;left: 47.5%;width: 36%;height: 6%;" type="text">
+                                    <input class="abs" name="street_address_2" value="<%= @form_fields['street_address_2']%>" style="top: 63.2%;left: 47.5%;width: 36%;height: 5.8%;" type="text">
+                                    <input class="abs" name="city_town_state_2" value="<%= @form_fields['city_town_state_2']%>" style="top: 73.2%;left: 47.5%;width: 36%;height: 5.8%;" type="text">
+
+                                    
+                            <input name="chronically_ill" value="unchecked" type="hidden">
+                            <input class="abs" style="top:79.4%;left:62.9%;" name="chronically_ill" <%= @form_fields['chronically_ill']%> value="checked" type="checkbox">
+                            <input name="terminally_ill" value="unchecked" type="hidden">
+                            <input class="abs" style="top:84.3%;left:62.9%;" name="terminally_ill" <%= @form_fields['terminally_ill']%> value="checked" type="checkbox">
+
+                                    <input class="abs" name="date_certifed" value="<%= @form_fields['date_certifed']%>" style="top: 83.2%;left: 74%;width: 10%;height: 5.5%;" type="text">
                                   <!-- fields -->
                                     
                                     <input type="hidden" name="unique_id" value="<%= @form_fields['unique_id'] %>">
