--- a/app/views/forms/_form1099s.html.erb
+++ b/app/views/forms/_form1099s.html.erb
@@ -32,19 +32,25 @@
                                    <img width="100%" src="/media/1099s.png" />
                                     
                                     <!-- fields -->
-                                    <input class="abs" style="top: 13%;left: 1%;width: 45%;height: 21%;" name="filers_name_address" value="" type="text">
-                                    <input class="abs" name="filers_fid" value="" style="top: 39%;left: 1%;width: 22%;height: 5%;" type="text">
-                                    <input class="abs" name="transferors_id" value="" style="top: 39%;left: 24%;width: 22%;height: 5%;" type="text">
-                                    <input class="abs" name="transferors_name" value="" style="top: 49%;left: 1%;width: 45%;height: 10%;" type="text">
-                                    <input class="abs" name="street_address" value="" style="top: 64%;left: 1%;width: 45%;height: 5%;" type="text">
-                                    <input class="abs" name="city_town_state" value="" style="top: 74%;left: 1%;width: 45%;height: 5%;" type="text">
-                                    <input class="abs" name="account_number" value="" style="top: 84%;left: 1%;width: 45%;height: 5%;" type="text">
-                                    <input class="abs" style="top: 9%;left: 47%;width: 18%;height: 10%;" name="1" value="" type="text">
-                                    <input class="abs" name="2" value="" style="top: 24%;left: 48.5%;width: 16.5%;height: 10%;" type="text">
-                                    <input class="abs" name="3" value="" style="top: 39%;left: 47%;width: 37%;height: 15%;" type="text">
-                                    <input class="abs" name="4" value="" style="" type="text">
-                                    <input class="abs" name="5" value="" style="" type="text">
-                                    <input class="abs" name="6" value="" style="top: 83.5%;left: 48.5%;width: 35.5%;height: 5%;" type="text">
+                                    <input class="abs" style="top: 13%;left: 1%;width: 45%;height: 21%;" name="filers_name_address" value="<%= @form_fields['filers_name_address']%>" type="text">
+                                    <input class="abs" name="filers_fid" value="<%= @form_fields['filers_fid']%>" style="top: 39%;left: 1%;width: 22%;height: 5%;" type="text">
+                                    <input class="abs" name="transferors_id" value="<%= @form_fields['transferors_id']%>" style="top: 39%;left: 24%;width: 22%;height: 5%;" type="text">
+                                    <input class="abs" name="transferors_name" value="<%= @form_fields['transferors_name']%>" style="top: 49%;left: 1%;width: 45%;height: 10%;" type="text">
+                                    <input class="abs" name="street_address" value="<%= @form_fields['street_address']%>" style="top: 64%;left: 1%;width: 45%;height: 5%;" type="text">
+                                    <input class="abs" name="city_town_state" value="<%= @form_fields['city_town_state']%>" style="top: 74%;left: 1%;width: 45%;height: 5%;" type="text">
+                                    <input class="abs" name="account_number" value="<%= @form_fields['account_number']%>" style="top: 84%;left: 1%;width: 45%;height: 5%;" type="text">
+                                    <input class="abs" style="top: 9%;left: 47%;width: 18%;height: 10%;" name="1" value="<%= @form_fields['1']%>" type="text">
+                                    <input class="abs" name="2" value="<%= @form_fields['2']%>" style="top: 24%;left: 48.5%;width: 16.5%;height: 10%;" type="text">
+                                    <input class="abs" name="3" value="<%= @form_fields['3']%>" style="top: 39%;left: 47%;width: 37%;height: 15%;" type="text">
+                                    <input class="abs" name="4" value="<%= @form_fields['4']%>" style="" type="text">
+                        <input name="4" value="unchecked" type="hidden">
+                        <input class="abs" style="top:57.4%;left:82.2%;" name="4" <%= @form_fields['4']%> value="checked" type="checkbox">
+
+                                    <input class="abs" name="5" value="<%= @form_fields['']%>" style="" type="text">
+                        <input name="5" value="unchecked" type="hidden">
+                        <input class="abs" style="top:70%;left:82.1%;" name="5" <%= @form_fields['5']%> value="checked" type="checkbox">
+
+                                    <input class="abs" name="6" value="<%= @form_fields['6']%>" style="top: 83.5%;left: 48.5%;width: 35.5%;height: 5%;" type="text">
                                   <!-- fields -->
                                     
                                     <input type="hidden" name="unique_id" value="<%= @form_fields['unique_id'] %>">
