--- a/app/views/forms/_form1099sa.html.erb
+++ b/app/views/forms/_form1099sa.html.erb
@@ -32,20 +32,27 @@
                                    <img width="100%" src="/media/1099sa.png" />
                                     
                                     <!-- fields -->
-                                    <input class="abs" style="top: 13%;left: 1%;width: 45%;height: 21%;" name="trustees_payers_name_address" value="" type="text">
-                                    <input class="abs" name="payers_fin" value="" style="top: 39%;left: 1%;width: 22%;height: 5%;" type="text">
-                                    <input class="abs" name="recipients_id" value="" style="top: 39%;left: 24%;width: 22%;height: 5%;" type="text">
-                                    <input class="abs" name="recipients_name" value="" style="top: 49%;left: 1%;width: 45%;height: 10%;" type="text">
-                                    <input class="abs" name="street_address" value="" style="top: 64%;left: 1%;width: 45%;height: 5%;" type="text">
-                                    <input class="abs" name="city_town_state" value="" style="top: 74%;left: 1%;width: 45%;height: 5%;" type="text">
-                                    <input class="abs" name="account_number" value="" style="top: 84%;left: 1%;width: 45%;height: 5%;" type="text">
-                                    <input class="abs" style="top: 39%;left: 49%;width: 16%;height: 5%;" name="1" value="" type="text">
-                                    <input class="abs" name="2" value="" style="top: 39%;left: 68%;width: 16%;height: 5%;" type="text">
-                                    <input class="abs" name="3" value="" style="top: 49%;left: 47%;width: 18%;height: 10%;" type="text">
-                                    <input class="abs" name="4" value="" style="top: 49%;left: 67.5%;width: 16.5%;height: 10%;" type="text">
-                                    <input class="abs" name="5_hsa" value="" style="" type="text">
-                                    <input class="abs" name="5_archer_msa" value="" style="" type="text">
-                                    <input class="abs" name="5_ma_msa" value="" style="" type="text">
+                                    <input class="abs" style="top: 13%;left: 1%;width: 45%;height: 21%;" name="trustees_payers_name_address" value="<%= @form_fields['trustees_payers_name_address']%>" type="text">
+                                    <input class="abs" name="payers_fin" value="<%= @form_fields['payers_fin']%>" style="top: 39%;left: 1%;width: 22%;height: 5%;" type="text">
+                                    <input class="abs" name="recipients_id" value="<%= @form_fields['recipients_id']%>" style="top: 39%;left: 24%;width: 22%;height: 5%;" type="text">
+                                    <input class="abs" name="recipients_name" value="<%= @form_fields['recipients_name']%>" style="top: 49%;left: 1%;width: 45%;height: 10%;" type="text">
+                                    <input class="abs" name="street_address" value="<%= @form_fields['street_address']%>" style="top: 64%;left: 1%;width: 45%;height: 5%;" type="text">
+                                    <input class="abs" name="city_town_state" value="<%= @form_fields['city_town_state']%>" style="top: 74%;left: 1%;width: 45%;height: 5%;" type="text">
+                                    <input class="abs" name="account_number" value="<%= @form_fields['account_number']%>" style="top: 84%;left: 1%;width: 45%;height: 5%;" type="text">
+                                    <input class="abs" style="top: 39%;left: 49%;width: 16%;height: 5%;" name="1" value="<%= @form_fields['1']%>" type="text">
+                                    <input class="abs" name="2" value="<%= @form_fields['2']%>" style="top: 39%;left: 68%;width: 16%;height: 5%;" type="text">
+                                    <input class="abs" name="3" value="<%= @form_fields['3']%>" style="top: 49%;left: 47%;width: 18%;height: 10%;" type="text">
+                                    <input class="abs" name="4" value="<%= @form_fields['4']%>" style="top: 49%;left: 67.5%;width: 16.5%;height: 10%;" type="text">
+
+                                    <input name="5_hsa" value="unchecked" type="hidden">
+<input class="abs" style="top:60.1%;left:54.8%;" name="5_hsa" <%= @form_fields['5_hsa']%> value="checked" type="checkbox">
+
+                                    <input name="5_archer_msa" value="unchecked" type="hidden">
+<input class="abs" style="top:66.5%;left:54.8%;" name="5_archer_msa" <%= @form_fields['5_archer_msa']%> value="checked" type="checkbox">
+
+                                    <input name="5_ma_msa" value="unchecked" type="hidden">
+<input class="abs" style="top:73.9%;left:54.8%;" name="5_ma_msa" <%= @form_fields['5_ma_msa']%> value="checked" type="checkbox">
+
                                   <!-- fields -->
                                     
                                     <input type="hidden" name="unique_id" value="<%= @form_fields['unique_id'] %>">
