--- a/app/views/forms/_form3922.html.erb
+++ b/app/views/forms/_form3922.html.erb
@@ -32,24 +32,24 @@
                     <div id="fields-container" class="form3922">
                         <img width="100%" src="/
 media/3922.png" />
-                          <input class="abs" style="top: 7%;left: 10%;width: 38%;height: 6%;" name="corp_name" value="" placeholder="" type="text">
-                          <input class="abs" style="top: 6%;left: 48.5%;width: 15.5%;height: 3%;" name="1" value="" placeholder="" type="text">
-                          <input class="abs" style="top: 10.2%;left: 48.5%;width: 15.5%;height: 3%;" name="2" value="" placeholder="" type="text">
-                          <input class="abs" style="top: 14.6%;left: 9.5%;width: 18%;height: 1.8%;" name="corp_fin" value="" placeholder="" type="text">
-                          <input class="abs" style="top: 14.6%;left: 29%;width: 19%;height: 2%;" name="empl_id" value="" placeholder="" type="text">
+                          <input class="abs" style="top: 7%;left: 10%;width: 38%;height: 6%;" name="corp_name" value="<%= @form_fields['corp_name']%>" placeholder="" type="text">
+                          <input class="abs" style="top: 6%;left: 48.5%;width: 15.5%;height: 3%;" name="1" value="<%= @form_fields['1']%>" placeholder="" type="text">
+                          <input class="abs" style="top: 10.2%;left: 48.5%;width: 15.5%;height: 3%;" name="2" value="<%= @form_fields['2']%>" placeholder="" type="text">
+                          <input class="abs" style="top: 14.6%;left: 9.5%;width: 18%;height: 1.8%;" name="corp_fin" value="<%= @form_fields['corp_fin']%>" placeholder="" type="text">
+                          <input class="abs" style="top: 14.6%;left: 29%;width: 19%;height: 2%;" name="empl_id" value="<%= @form_fields['empl_id']%>" placeholder="" type="text">
 
 
-                          <input class="abs" style="top: 15.9%;left: 49.5%;width: 15%;height: 2.0%;" name="3" value="" placeholder="" type="text">
-                          <input class="abs" style="top: 15.8%;left: 66.3%;height: 2.3%;width: 14%;" name="4" value="" placeholder="" type="text">
-                          <input class="abs" style="top: 19.2%;left: 49.3%;width: 15%;height: 1.8%;" name="5" value="" placeholder="" type="text">
-                          <input class="abs" style="top: 19.2%;left: 65.4%;width: 15%;height: 1.8%;" name="6" value="" placeholder="" type="text">
-                          <input class="abs" style="top: 17.6%;left: 9.5%;width: 38.5%;height: 4%;" name="empl_name" value="" placeholder="" type="text">
+                          <input class="abs" style="top: 15.9%;left: 49.5%;width: 15%;height: 2.0%;" name="3" value="<%= @form_fields['3']%>" placeholder="" type="text">
+                          <input class="abs" style="top: 15.8%;left: 66.3%;height: 2.3%;width: 14%;" name="4" value="<%= @form_fields['4']%>" placeholder="" type="text">
+                          <input class="abs" style="top: 19.2%;left: 49.3%;width: 15%;height: 1.8%;" name="5" value="<%= @form_fields['5']%>" placeholder="" type="text">
+                          <input class="abs" style="top: 19.2%;left: 65.4%;width: 15%;height: 1.8%;" name="6" value="<%= @form_fields['6']%>" placeholder="" type="text">
+                          <input class="abs" style="top: 17.6%;left: 9.5%;width: 38.5%;height: 4%;" name="empl_name" value="<%= @form_fields['empl_name']%>" placeholder="" type="text">
 
-                          <input class="abs" style="top: 22.3%;left: 9.5%;width: 38%;height: 2.3%;" name="street_address" value="" placeholder="" type="text">
-<input class="abs" style="top: 25.3%;left: 9.5%;width: 38%;height: 1.8%;" name="city_town_state_province_zip" value="" placeholder="" type="text">
-                          <input class="abs" style="top: 22.5%;left: 48.5%;width: 31.5%;height: 3.1%;" name="7" value="" placeholder="" type="text">
-                          <input class="abs" style="top: 28%;left: 49.5%;width: 30.5%;height: 1.9%;" name="8" value="" placeholder="" type="text">
-                          <input class="abs" style="top: 28.4%;left: 9%;width: 38%;height: 1.5%;" name="account_number" value="" placeholder="" type="text">
+                          <input class="abs" style="top: 22.3%;left: 9.5%;width: 38%;height: 2.3%;" name="street_address" value="<%= @form_fields['street_address']%>" placeholder="" type="text">
+                          <input class="abs" style="top: 25.3%;left: 9.5%;width: 38%;height: 1.8%;" name="city_town_state_province_zip" value="<%= @form_fields['city_town_state_province_zip']%>" placeholder="" type="text">
+                          <input class="abs" style="top: 22.5%;left: 48.5%;width: 31.5%;height: 3.1%;" name="7" value="<%= @form_fields['7']%>" placeholder="" type="text">
+                          <input class="abs" style="top: 28%;left: 49.5%;width: 30.5%;height: 1.9%;" name="8" value="<%= @form_fields['8']%>" placeholder="" type="text">
+                          <input class="abs" style="top: 28.4%;left: 9%;width: 38%;height: 1.5%;" name="account_number" value="<%= @form_fields['account_number']%>" placeholder="" type="text">
 
                           <!-- checkboxes -->
 <!--
